--- a/ds421_ret_r_code.Rmd
+++ b/ds421_ret_r_code.Rmd
@@ -619,6 +619,16 @@ air_cropped <-
     california_sp
   )
 
+# save cropped air data
+save(
+  air_cropped,
+  file = 
+    file.path(
+      "intermediate_data", 
+      "air_cropped.rdata"
+    )
+)
+
 # plot(air_cropped)
 
 # remove all objects from the environment
@@ -1080,6 +1090,7 @@ rm(list = ls(all.names = TRUE))
 
 ```{r isolate individual monitors}
 
+# load 88101 file
 load(
   file = 
     file.path(
@@ -1088,7 +1099,174 @@ load(
     )
 )
 
+# load function to fix variable names
+load(
+  file = 
+    file.path(
+      "functions", 
+      "column_name_fixer.rdata"
+    )
+)
 
+# fix column names
+epa_daily_88101_2016_working <-
+  epa_daily_88101_2016_working %>% 
+  column_name_fixer()
+
+# limit to california
+cal_epa_88101_2016_working <-
+  epa_daily_88101_2016_working %>% 
+  filter(state_code == "06")
+
+# remove big file 
+rm(epa_daily_88101_2016_working)
+invisible(gc())
+
+# create monitor ids
+cal_epa_88101_2016_working <- 
+  cal_epa_88101_2016_working %>% 
+  mutate(
+    monitor_id = 
+      paste(
+        state_code, 
+        county_code, 
+        site_num, 
+        sep="-"), 
+    poc = str_pad(poc, 2, pad = "0"),
+    monitor_id_poc = str_c(monitor_id, "-", poc)
+    )
+
+# make tibble with monitors only
+cal_epa_88101_2016_monitors <- 
+  cal_epa_88101_2016_working %>% 
+  select(
+    monitor_id_poc,
+    monitor_id,
+    poc,
+    state_code,
+    county_code, 
+    site_num, 
+    latitude, 
+    longitude, 
+    datum, 
+    local_site_name, 
+    address, 
+    state_name, 
+    county_name, 
+    city_name, 
+    cbsa_name) %>% 
+  distinct()
+
+# unqiue monitors based solely on latitude and longitude
+cal_epa_88101_2016_monitor_locations <- 
+  cal_epa_88101_2016_monitors %>% 
+  select(
+    monitor_id_poc, 
+    latitude, 
+    longitude, 
+    datum) %>% 
+  distinct()
+
+# View(table(cal_epa_88101_monitor_unique_locations$monitor_id))
+
+# load state shapefile
+load(
+  file = 
+    file.path(
+      "intermediate_data", 
+      "california_shapefile.rdata"
+    )
+)
+
+# load cropped air pollution data
+load(
+  file = 
+    file.path(
+      "intermediate_data", 
+      "air_cropped.rdata"
+    )
+)
+
+# get datums of state shapefile and air data (both WGS84)
+crs(california_shapefile)
+crs(air_cropped)
+
+# isolate NAD83 monitors
+cal_epa_monitors_nad83 <- 
+  cal_epa_88101_2016_monitor_locations %>% 
+  filter(datum == "NAD83")
+
+# save NAD83 monitors
+save(
+  cal_epa_monitors_nad83,
+  file = 
+    file.path(
+      "intermediate_data",
+      "cal_epa_monitors_nad83.rdata"
+      )
+  )
+  
+# isolate WGS84 monitors
+cal_epa_monitors_wgs84 <- 
+  cal_epa_88101_2016_monitor_locations %>% 
+  filter(datum == "WGS84")
+
+# save WGS84 monitors
+save(
+  cal_epa_monitors_wgs84,
+  file = 
+    file.path(
+      "intermediate_data",
+      "cal_epa_monitors_wgs84.rdata"
+      )
+  )
+
+# make monitor locations into spatial point files
+cal_epa_monitors_wgs84_sf <-
+  st_as_sf(
+    cal_epa_monitors_wgs84,
+    coords =
+      c("longitude",
+        "latitude"),
+    crs = st_crs(air_cropped)
+  )
+
+cal_epa_monitors_nad83_sf <-
+  st_as_sf(
+    cal_epa_monitors_nad83,
+    coords =
+      c("longitude",
+        "latitude"),
+    crs = 4269  # epsg code for NAD83
+  )
+
+# convert nad83-datum monitors to wgs84
+cal_epa_monitors_nad83_to_wgs84_sf <- 
+  st_transform(
+    cal_epa_monitors_nad83_sf, 
+    crs = st_crs(air_cropped))
+
+# join transformed monitors together
+cal_epa_monitors_sf <- 
+  rbind(
+    cal_epa_monitors_wgs84_sf,
+    cal_epa_monitors_nad83_to_wgs84_sf
+  ) %>% 
+  mutate(transformed_datum = "wgs84", 
+         original_datum = datum) %>%  # add new datum
+  select(monitor_id_poc, transformed_datum, original_datum) %>% 
+  left_join(cal_epa_88101_2016_monitors,  # join back to the rest of the data
+            by = "monitor_id_poc") %>% 
+  select(-datum)  # remove "datum" column
+
+save(
+  cal_epa_monitors_sf, 
+  file = 
+    file.path(
+      "intermediate_data", 
+      "cal_epa_monitors_sf.rdata"
+    )
+)
 
 ```
 
